# penny

./: .env.example  .flake8  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  Makefile  README.md  TODO.md  eslint.config.js  mempalace.yaml  package.json  pyproject.toml  setup.cfg
.claude/: DA.md  settings.example.json  statusline-command.sh
.claude/agents/: analysis-agent.md  analysis.md  architecture-analyzer.md  architecture-synthesizer.md  architecture-validator.md  clarification-specialist.md  clarification.md  code-structure-generator.md  core-implementation-generator.md  deployment-readiness-validator.md  documentation-generator.md  generation-agent.md  generation.md  implementation-plan-generator.md  implementation-validator.md  memory.md  pattern-researcher.md  project-delivery-coordinator.md  quality-validator.md  requirements-analyzer.md  requirements-clarifier.md  requirements-validator.md  research-discovery.md  research.md  security-validator.md  synthesis-agent.md  synthesis.md  technical-constraint-clarifier.md  technology-decision-synthesizer.md  technology-evaluator.md  technology-researcher.md  test-generator.md  validation.md
.claude/commands/clean/: all.md  memories.md  plans.md  research.md  state.md
.claude/commands/search/: perplexity-search.md  perplexity.md  tavily.md
.claude/docs/: AGENT-DESIGN-PRINCIPLES.md  AGENT-REGISTRY.md  AGENT-TEMPLATE-USAGE.md  COGNITIVE-FUNCTION-TAXONOMY.md  PHILOSOPHY.md  agent-conversion-handoff.md  agent-protocol-reference.md  agent-registry.md  code-generation-reference.md  cognitive-function-taxonomy.md  context-management.md  direct-execution-reference.md  domain-adaptation-examples.md  execution-protocols.md  johari-reference.md  philosophy.md  skill-catalog.md  workflow-validation-guide.md
.claude/hooks/notification/: notification.py
.claude/hooks/permission-request/: notification.py
.claude/hooks/post-tool-use/: exit-plan-mode.py  skill-bypass-detector.py
.claude/hooks/pre-tool-use/: agent-start.py  skill-enforcement.py
.claude/hooks/session-start/: initialize-pai-session.py  load-core-context.py
.claude/hooks/stop/: stop.py
.claude/hooks/subagent-stop/: subagent-stop.py
.claude/hooks/user-prompt-submit/: append-message.py  submit.py
.claude/orchestration/: CLAUDE.md  __init__.py  base_protocol_step.py  paths.py
.claude/orchestration/directives/: __init__.py  base.py
.claude/orchestration/shared/: CLAUDE.md  __init__.py
.claude/protocols/: AGENT-EXECUTION-PROTOCOL.md  AGENT-INTERFACE-CONTRACTS.md  CONTEXT-INHERITANCE.md  REASONING-STRATEGIES.md  SECURITY-FIRST-DEVELOPMENT.md  TASK-ID.md  TEST-DRIVEN-DEVELOPMENT.md  adhoc-task-protocol.md  agent-protocol-core.md  agent-protocol-extended.md  cognitive-skill-orchestration-protocol.md  context-loading-patterns.md  context-pruning-protocol.md  da-meta-work-protocol.md  direct-execution-protocol.md
.claude/references/: agent-registry.md  context-inheritance.md  johari.md  python-import-standards.md
.claude/skills/develop-agent/: SKILL.md
.claude/skills/develop-architecture/: SKILL.md
.claude/skills/develop-backend/: CONFIG_REGISTRATION.py  SKILL.md
.claude/skills/develop-command/: SKILL.md
.claude/templates/: CONTEXT-INHERITANCE-EXAMPLES.md  JOHARI.md  PROJECT_PLAN.md
.claude/voice-server/: .env.example  README.md  pai-voice-server.service  requirements.txt  server.py  setup.sh
.github/: secret_scanning.yml
.github/workflows/: ci.yml
.pi/: SYSTEM.md
.pi/agents/: annie.md  carren.md  echo.md  piper.md  skribble.md  synthia.md  tabitha.md  vera.md
.pi/lib/: tsconfig.json
.pi/prompts/: audit.md  enhance-prompt.md  polish.md  transcribe-youtube.md  tune.md
apps/observability/: Dockerfile  docker-compose.yml  pyproject.toml
apps/observability/src/observability/: __init__.py  __main__.py  config.py  db.py  logger.py  main.py  models.py  scheduler.py
apps/observability/src/observability/tests/: test_logger.py
apps/observability/tests/: conftest.py  test_auth.py  test_config.py  test_db.py  test_deployment.py  test_e2e.py  test_integration.py  test_logs.py  test_logs_integration.py  test_migration_v3_to_v4.py  test_migration_v4_to_v5.py  test_orchestration_db.py  test_orchestration_integration.py  test_scheduler.py  test_server_startup.py
apps/orchestration/: README.md  pyproject.toml
apps/orchestration/src/orchestration/: __init__.py  __main__.py  checkpointer.py  cli.py  context.py  contracts.py  engine.py  independence.py  loans.py  obs_client.py  outcome_writer.py  recall.py  recovery.py
apps/orchestration/src/orchestration/playbooks/: __init__.py  agent.py  code.py  code_detection.py  derivation.py  imagegen.py  jsa.py  learn.py  manim.py  plan.py  prd.py  reference_cycle.py  research.py  rez.py  sca.py
apps/orchestration/src/orchestration/primitives/: __init__.py  act.py  frame.py  learn.py  observe.py  plan.py  spec.py  verify.py
apps/orchestration/tests/: test_agent_playbook.py  test_autonomy_gate.py  test_checkpointer.py  test_cli.py  test_code_detection.py  test_code_playbook.py  test_context.py  test_contract_prompt_drift.py  test_contracts.py  test_derivation_playbook.py  test_dynamic_fan.py  test_engine.py  test_engine_compliance.py  test_engine_seams.py  test_imagegen_live_smoke.py  test_imagegen_playbook.py  test_independence.py  test_jsa_flow_diagram.py  test_jsa_playbook.py  test_learn_playbook.py  test_loans.py  test_loop_guards.py  test_manim_playbook.py  test_obs_client.py  test_outcome_writer.py  test_plan_playbook.py  test_prd_playbook.py  test_recall.py  test_recovery.py  test_research_playbook.py  test_rez_playbook.py  test_sca_playbook.py  test_tool_states.py
docs/agents/: AGENTS.md
docs/penny/: AGENTS.md  clarification-protocol.md  compaction-protocol.md  routing-protocol.md  tool-usage.md
scripts/: validate_ideal_state.py
scripts/setup/: init-external-tools.sh  init-joern.sh  init-memory.sh  init-observability.sh  init-sca-tools.sh  init-watchers.sh  setup.sh
scripts/system/: register_artifact.py
scripts/tools/: scaffold-skill.py  word_doc_gen.py
(+1836 files in other folders)
