[project]
name = "penny"
version = "0.1.0"
description = "Penny - Personal AI assistant with MemPalace memory system"
requires-python = ">=3.12"
dependencies = [
    "mempalace>=3.0.0",
    "chromadb>=1.5.9",
    "semgrep>=1.160.0",           # SAST scanner — used by jsa skill
    "python-statemachine>=2.0",   # FSM library — used by all skill orchestrators
    "tree-sitter>=0.21.0",        # AST parser — used by jsa splitter
    "tree-sitter-javascript>=0.21.0",
    "fastapi>=0.115,<1",          # Observability backend
    "uvicorn[standard]>=0.30,<1",  # Observability backend
    "aiosqlite>=0.20,<1",         # Observability backend
    "python-dotenv>=1.0,<2",      # Observability backend
    "pydantic>=2.0,<3",           # Observability backend
    "apscheduler>=3.11,<4",       # Observability backend
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23",
    "flake8>=7.0.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "isort>=5.13.0",
    "httpx>=0.27",
]

# Use 'uv' for all Python dependency management:
#   make setup     — full setup (venv + deps + init)
#   uv sync        — sync dependencies from pyproject.toml
#   uv add <pkg>   — add a new dependency

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.megg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "\\.venv/",
    "node_modules/",
    "\\.mempalace/",
]

[tool.pytest.ini_options]
testpaths = [".pi/extensions/*/tests", "scripts/system/*/tests", "scripts/system/tests", ".pi/skills/jsa/tests"]
python_files = ["*.test.py", "test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
pythonpath = ["scripts/system"]