[project]
name = "penny"
version = "0.1.0"
description = "Penny - Personal AI assistant with MemPalace memory system"
requires-python = ">=3.12"
dependencies = [
    "mempalace>=3.0.0",
    "chromadb>=1.5.9",
    "semgrep>=1.160.0",           # SAST scanner — used by jsa skill
    "python-statemachine>=2.0",   # FSM library — legacy skill orchestrators + orchestration engine
    "tree-sitter>=0.21.0",        # AST parser — used by jsa splitter
    "tree-sitter-javascript>=0.21.0",
    # Workspace packages (installed editable via uv workspace). Their own deps
    # (fastapi, uvicorn, aiosqlite, python-dotenv, pydantic, apscheduler, …)
    # arrive transitively — do NOT duplicate them here.
    "penny-observability",        # apps/observability — observability backend
    "orchestration",              # apps/orchestration — shared FSM engine
]

[tool.uv.workspace]
members = ["apps/observability", "apps/orchestration"]

[tool.uv.sources]
penny-observability = { workspace = true }
orchestration = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",      # per-test timeout safety net for `make test`
    "flake8>=7.0.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "isort>=5.13.0",
    "httpx>=0.27",
]

# Use 'uv' for all Python dependency management:
#   make setup     — full setup (venv + deps + init)
#   uv sync        — sync dependencies from pyproject.toml
#   uv add <pkg>   — add a new dependency

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.megg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "\\.venv/",
    "node_modules/",
    "\\.mempalace/",
]

[tool.pytest.ini_options]
testpaths = [".pi/extensions/*/tests", "scripts/system/*/tests", "scripts/system/tests", ".pi/skills/jsa/tests", "apps/orchestration/tests"]
python_files = ["*.test.py", "test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "e2e: end-to-end tests (may hit external/live services)",
    "slow: slow tests",
    "network: tests requiring network access",
    "integration: integration tests (may require a running service)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
pythonpath = ["scripts/system"]