[project]
name = "orchestration"
version = "0.1.0"
description = "Shared FSM execution engine for Penny skills — durable checkpointer, self-recovery, best-effort observability"
requires-python = ">=3.12"
dependencies = [
    "python-statemachine>=2.0",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
orchestrate = "orchestration.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestration"]
